--- a/agent/templates/bench/supervisor.conf
+++ b/agent/templates/bench/supervisor.conf
@@ -5,27 +5,27 @@ environment={% for key, value in environment_variables.items() %}{{ key }}="{{ v
 {% endif %}
 
 [program:frappe-bench-frappe-web]
-command=/home/frappe/frappe-bench/env/bin/gunicorn --bind 0.0.0.0:8000 --workers {{ gunicorn_workers }} --timeout {{ http_timeout }} --graceful-timeout 30 --worker-tmp-dir /dev/shm frappe.app:application --preload --statsd-host={{ statsd_host }} --statsd-prefix={{ name }} {% if gunicorn_threads_per_worker > 0 %} --worker-class=gthread --threads={{ gunicorn_threads_per_worker }}{% endif %} {% if gunicorn_workers > 1 %} --max-requests 5000 --max-requests-jitter 1000 {% endif %}
+command=/home/ivend/ivend-bench/env/bin/gunicorn --bind 0.0.0.0:8000 --workers {{ gunicorn_workers }} --timeout {{ http_timeout }} --graceful-timeout 30 --worker-tmp-dir /dev/shm frappe.app:application --preload --statsd-host={{ statsd_host }} --statsd-prefix={{ name }} {% if gunicorn_threads_per_worker > 0 %} --worker-class=gthread --threads={{ gunicorn_threads_per_worker }}{% endif %} {% if gunicorn_workers > 1 %} --max-requests 5000 --max-requests-jitter 1000 {% endif %}
 environment=FORWARDED_ALLOW_IPS="*"
 priority=4
 autostart=true
 autorestart=true
 stopwaitsecs=40
 killasgroup=true
-stdout_logfile=/home/frappe/frappe-bench/logs/web.log
-stderr_logfile=/home/frappe/frappe-bench/logs/web.error.log
-user=frappe
-directory=/home/frappe/frappe-bench/sites
+stdout_logfile=/home/ivend/ivend-bench/logs/web.log
+stderr_logfile=/home/ivend/ivend-bench/logs/web.error.log
+user=ivend
+directory=/home/ivend/ivend-bench/sites
 
 [program:frappe-bench-frappe-schedule]
 command=bench schedule
 priority=9
 autostart=true
 startsecs=0
-stdout_logfile=/home/frappe/frappe-bench/logs/schedule.log
-stderr_logfile=/home/frappe/frappe-bench/logs/schedule.error.log
-user=frappe
-directory=/home/frappe/frappe-bench
+stdout_logfile=/home/ivend/ivend-bench/logs/schedule.log
+stderr_logfile=/home/ivend/ivend-bench/logs/schedule.error.log
+user=ivend
+directory=/home/ivend/ivend-bench
 
 {% if use_rq_workerpool and merge_all_rq_queues %}
 
@@ -34,11 +34,11 @@ command=bench worker-pool --queue short,default,long --num-workers={{ background
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 process_name=%(program_name)s
 
@@ -49,11 +49,11 @@ command=bench worker-pool --queue short,default --num-workers={{ background_work
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=360
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 process_name=%(program_name)s
 
@@ -62,11 +62,11 @@ command=bench worker-pool --queue long,default,short --num-workers={{ background
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 process_name=%(program_name)s
 
@@ -77,11 +77,11 @@ command=bench worker --queue short,default,long
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -93,11 +93,11 @@ command=bench worker --queue short,default
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=360
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -107,11 +107,11 @@ command=bench worker --queue long,default,short
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -123,11 +123,11 @@ command=bench worker --queue default
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -137,11 +137,11 @@ command=bench worker --queue short
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=360
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -151,11 +151,11 @@ command=bench worker --queue long
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/worker.log
+stderr_logfile=/home/ivend/ivend-bench/logs/worker.error.log
+user=ivend
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory=/home/ivend/ivend-bench
 killasgroup=true
 numprocs={{ background_workers }}
 process_name=%(program_name)s-%(process_num)d
@@ -163,34 +163,34 @@ process_name=%(program_name)s-%(process_num)d
 {% endif %}
 
 [program:frappe-bench-redis-cache]
-command=redis-server /home/frappe/frappe-bench/config/redis-cache.conf
+command=redis-server /home/ivend/ivend-bench/config/redis-cache.conf
 priority=1
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/redis-cache.log
-stderr_logfile=/home/frappe/frappe-bench/logs/redis-cache.error.log
-user=frappe
-directory=/home/frappe/frappe-bench/sites
+stdout_logfile=/home/ivend/ivend-bench/logs/redis-cache.log
+stderr_logfile=/home/ivend/ivend-bench/logs/redis-cache.error.log
+user=ivend
+directory=/home/ivend/ivend-bench/sites
 
 [program:frappe-bench-redis-queue]
-command=redis-server /home/frappe/frappe-bench/config/redis-queue.conf
+command=redis-server /home/ivend/ivend-bench/config/redis-queue.conf
 priority=1
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/redis-queue.log
-stderr_logfile=/home/frappe/frappe-bench/logs/redis-queue.error.log
-user=frappe
-directory=/home/frappe/frappe-bench/sites
+stdout_logfile=/home/ivend/ivend-bench/logs/redis-queue.log
+stderr_logfile=/home/ivend/ivend-bench/logs/redis-queue.error.log
+user=ivend
+directory=/home/ivend/ivend-bench/sites
 
 [program:frappe-bench-node-socketio]
-command=node /home/frappe/frappe-bench/apps/frappe/socketio.js
+command=node /home/ivend/ivend-bench/apps/frappe/socketio.js
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/node-socketio.log
-stderr_logfile=/home/frappe/frappe-bench/logs/node-socketio.error.log
-user=frappe
-directory=/home/frappe/frappe-bench
+stdout_logfile=/home/ivend/ivend-bench/logs/node-socketio.log
+stderr_logfile=/home/ivend/ivend-bench/logs/node-socketio.error.log
+user=ivend
+directory=/home/ivend/ivend-bench
 
 [group:frappe-bench-web]
 programs=frappe-bench-frappe-web,frappe-bench-node-socketio
@@ -220,19 +220,19 @@ programs=frappe-bench-redis-cache,frappe-bench-redis-queue
 command=code-server --bind-addr 0.0.0.0:8088 .
 autostart=false
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/code-server.log
-stderr_logfile=/home/frappe/frappe-bench/logs/code-server.error.log
-user=frappe
-directory=/home/frappe/frappe-bench/apps
+stdout_logfile=/home/ivend/ivend-bench/logs/code-server.log
+stderr_logfile=/home/ivend/ivend-bench/logs/code-server.error.log
+user=ivend
+directory=/home/ivend/ivend-bench/apps
 {% endif %}
 
 {% if is_ssh_enabled %}
 [program:sshd]
-command=/usr/sbin/sshd -f /home/frappe/frappe-bench/config/ssh/sshd_config -D -e
+command=/usr/sbin/sshd -f /home/ivend/ivend-bench/config/ssh/sshd_config -D -e
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/ssh.log
-stderr_logfile=/home/frappe/frappe-bench/logs/ssh.error.log
-user=frappe
+stdout_logfile=/home/ivend/ivend-bench/logs/ssh.log
+stderr_logfile=/home/ivend/ivend-bench/logs/ssh.error.log
+user=ivend
 directory=/home/frappe
 {% endif %}
